[package]
name = "rust-tuner"
version = "0.1.0"
authors = ["mitchellhansen <mitchellhansen0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pitch = {path = "../pitch"}
pitch_calc = "0.12.0"
cpal = "0.11.0"
anyhow = "1.0.28"
ringbuf = "0.1.6"